--- a/src/style.scss
+++ b/src/style.scss
@@ -130,3 +130,12 @@ main {
     margin-bottom: 3rem;
   }
 }
+
+.course-title {
+  background: #f1f2f2;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: 2rem;
+  font-weight: 200;
+  border-bottom: 1px solid #dedededd;
+}
